--- a/css.css
+++ b/css.css
@@ -7,13 +7,13 @@ nav {
 .main_header {
     font-family: arial; 
     font-size: 3.4rem; 
+    margin-top: 20vh;
 
 }
 body {
     background-color: rgb(2, 3, 28);
     color: white;
-    margin-top: 20vh;
-    margin-left: 10vw;
+ 
     
     
 }
@@ -66,3 +66,222 @@ left: 0;
     top: 5vh;
     
 }
+
+/*---------------------- Navigation -----------*/
+.Title {
+	color:#003168;
+	font-family: Arial;
+	text-align: center;
+	background-color: #FFF;
+	padding-top: 100vh;
+	padding-bottom: 15px;
+	font-size: 110%;
+	font-size-adjust:0.5;	
+}
+
+.Page {
+	background-color: #003168;
+	
+}
+
+.Logo {
+	margin-left: auto;
+	height: 30px
+}
+
+/*----------------------------------------------Navigation--------------------------------------------*/
+
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: "Poppins", sans-serif;
+  }
+  
+  .container {
+    max-width: 100%;
+    width: 100%;
+    height: 100px;
+    margin: 0px;
+  }
+  
+  .navbar {
+    width: 100%;
+    
+    box-shadow: 0 1px 4px ;
+  }
+  
+  .nav-container {
+      justify-content: space-between;
+      align-items: center;
+      height: 30vh;
+  }
+  
+  .navbar .menu-items {
+    display: inline-flex;
+    width:100%;
+  }
+  
+  .navbar .nav-container li {
+    list-style: none;
+  }
+  /*-----Menu text Items--------------------*/
+  .navbar .nav-container a {
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    font-size: 3rem;
+    padding: 0.7rem;
+    font-family: arial;
+      transition: font-size .35s ease-out;
+  }
+  
+  .navbar .nav-container a:hover{
+      
+      
+      font-size: 5rem;
+    transition: font-size .35s ease-in-out;
+  }
+  
+  /*-----Size of flyout menu--------------------*/
+  
+  .nav-container {
+      display: block;
+      position: relative;
+      height: 89px;
+      background-color: white;
+      
+  }
+  
+  .nav-container .checkbox {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 32px;
+    top: 34%;
+    left: 2%;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  .nav-container .hamburger-lines {
+    display: block;
+    height: 26px;
+    width: 32px;
+    position: absolute;
+    top: 34%;
+    left: 2%;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .nav-container .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: black;
+  }
+  
+  .nav-container .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+    
+  }
+  
+  .nav-container .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .nav-container .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+  
+  .navbar .menu-items {
+      opacity: 0;
+      padding-top: 120px;
+      color: white;
+      background: #B4975A;
+      height: 100vh;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      transition: opacity 0.35s ease-in ; /* Changed transition to only affect opacity */
+      text-align: left;
+      margin-left: -200%;
+  }
+  
+  .navbar .menu-items li {
+    margin-bottom: 1.2rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: 8%;
+  }
+  
+  .logo2 {
+    position: absolute;
+    top:19%;
+    right: 15px;
+    font-size: 1.2rem;
+    color: white;
+    height: 40px;
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .menu-items {
+    transform: translateX(0);
+    opacity: 1;
+      margin-left: 0px;
+      
+      transision: opacity 0.5s ease-in;
+    
+  
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+    transform: rotate(45deg);
+      background-color: white;
+      
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+    transform: scaleY(0);
+      background-color: white;
+      
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+    transform: rotate(-45deg);
+      background-color: white;
+  }
+  
+  .nav-container input[type="checkbox"]:checked ~ .logo{
+    display: none;
+  }
+  
+  /* CSS Document */
+  
+  .Title1 {
+      
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 32px;
+    top: 30%;
+    left: 46%;
+    z-index: 5;
+    font-size: 200%;
+    font-family: arial;
+    opacity: 1;
+    
+  }
+  
+  
