--- a/css.css
+++ b/css.css
@@ -240,8 +240,7 @@ left: 0;
     transform: translateX(0);
     opacity: 1;
       margin-left: 0px;
-      
-      transision: opacity 0.5s ease-in;
+      transition: opacity 0.5s ease-in;
     
   
   }
