--- a/css.css
+++ b/css.css
@@ -154,7 +154,8 @@ left: 0;
       display: block;
       position: relative;
       height: 89px;
-      background-color: white;
+      background: rgb(2,3,28);
+background: linear-gradient(167deg, rgba(2,3,28,1) 0%, rgba(120,77,3,1) 100%);
       
   }
   
@@ -211,11 +212,11 @@ left: 0;
       padding-top: 120px;
       color: white;
       background: #B4975A;
-      height: 100vh;
-      width: 100%;
+      height: 4000vh;
+      width: 40vw;
       display: flex;
       flex-direction: column;
-      transition: opacity 0.35s ease-in ; /* Changed transition to only affect opacity */
+      transition: opacity 0.35s ease-in; /* Changed transition to only affect opacity */
       text-align: left;
       margin-left: -200%;
   }
@@ -225,6 +226,7 @@ left: 0;
     font-size: 1.5rem;
     font-weight: 500;
     margin-left: 8%;
+    transition: margin-left 0.35s ease-in-out;
   }
   
   .logo2 {
