--- a/css.css
+++ b/css.css
@@ -189,7 +189,7 @@ background: linear-gradient(167deg, rgba(2,3,28,1) 0%, rgba(120,77,3,1) 100%);
     height: 4px;
     width: 100%;
     border-radius: 10px;
-    background: black;
+    background: rgb(255, 255, 255);
   }
   
   .nav-container .hamburger-lines .line1 {
