--- a/css.css
+++ b/css.css
@@ -23,7 +23,7 @@ nav {
     margin-top: 20vh;
     z-index: 999;
     color: white;
-    position: fixed;
+    position: relative;
 
 }
 body {
@@ -32,8 +32,10 @@ body {
     padding-right: 4vw;
     padding-top: 0vh;
     padding-bottom: 4vh;
-    
+    /* to animate*/
+     
 }
+
 @keyframes totheright {
     0% {left: 2vw;}
     50% {left:86.5vw;}
@@ -248,7 +250,7 @@ background: linear-gradient(167deg, rgba(2,3,28,1) 0%, rgba(120,77,3,1) 100%);
     margin-bottom: -10vh;
     font-size: 1.5rem;
     font-weight: 500;
-    margin-left: 4vw;
+    margin-left: 1vw;
     transition: margin-bottom 1s ease;
     
   }
@@ -307,6 +309,21 @@ background: linear-gradient(167deg, rgba(2,3,28,1) 0%, rgba(120,77,3,1) 100%);
   .nav-container input[type="checkbox"]:checked ~ .logo{
     display: none;
   }
+
+  .navbar .main_content {
+    color: white;
+    margin-left: 0vw;
+    transition: margin-left 0.35s ease;
+  }
+  .navbar input[type="checkbox"]:checked ~ .main_content {
+    transform: translateX(0);
+    margin-left: 10vw;
+    }
+  
+  .checkbox input[type="checkbox"]:not(:checked) ~ .main_content {
+    transform: translateX(0);
+    margin-left: 0vw;
+  }
   
   /* CSS Document */
   
@@ -327,4 +344,10 @@ background: linear-gradient(167deg, rgba(2,3,28,1) 0%, rgba(120,77,3,1) 100%);
   
 /*--------------Testing Styles ----------------------------*/
 
+.main_heading {
+  color: white;
+  font-family: Arial;
+  font-size: 2rem;
+  margin-left: 16vw
 
+}
