--- a/css.css
+++ b/css.css
@@ -325,7 +325,8 @@ background: linear-gradient(167deg, rgba(2,3,28,1) 0%, rgba(120,77,3,1) 100%);
 
   .main_content {
     color: white;
-    margin-left: 0vw;
+    margin-top: 15vh;
+    
     
   }
 
