--- a/hamburger.css.css
+++ b/hamburger.css.css
@@ -706,3 +706,74 @@
   .hamburger--vortex-r.is-active .hamburger-inner::after {
     bottom: 0;
     transform: rotate(-90deg); }
+
+    body {
+      background: radial-gradient(circle at 50% 210%, #784d03, #02031c); 
+      background-repeat: no-repeat;
+    
+      background-attachment: fixed;
+  
+    }
+  body {
+    font-family: "Lato", sans-serif;
+    color: white;
+  }
+  
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    background-color: #b34b4b00;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+  
+  /* =================================================================
+  
+  Hamburgers */
+  
+  
+  
+  
+  
+  
+  
+  
+  /* =================================================================*/
+  
+  .checkbox {
+      opacity: 0;
+      height: 100%;
+      width:100%;
+      z-index: 999999;
+  }
