fixed rem font sizes (not nav just page content)

--- a/css.css
+++ b/css.css
@@ -11,8 +11,9 @@ margin-left: -4vw;
 z-index: -1;
 
 }
-
-
+.heading_me{
+  font-size: 100rem;
+}
 nav {
     /*background-color: black;*/
     text-align: right;
