--- a/css.css
+++ b/css.css
@@ -14,6 +14,9 @@ z-index: -1;
 .heading_me{
   font-size: 100rem;
 }
+.body_text {
+  font-size: 10rem;
+}
 nav {
     /*background-color: black;*/
     text-align: right;
