--- a/hamburger.css
+++ b/hamburger.css
@@ -738,11 +738,12 @@
     font-size: 25px;
     color: white;
     display: block;
-    transition: 0.3s;
+    transition: color 0.3s ease, font-size 0.4s ease;
   }
   
   .sidenav a:hover {
     color: #f1f1f1;
+    font-size: 30px;
   }
   
   .sidenav .closebtn {
@@ -754,9 +755,16 @@
   }
   
   #main {
-    transition: margin-left .5s;
+    transition: margin-left .5s ease;
     padding: 16px;
-  }
+    opacity: 0;
+    /*transition: opacity 0.5s ease; */
+    /* margin-top: -5vh;
+    transition: opacity 0.5s ease, margin-top 0.7s ease-out;
+  */
+    }
+
+
   
   /* =================================================================
   
