--- a/hamburger.css
+++ b/hamburger.css
@@ -755,9 +755,11 @@
   }
   
   #main {
-    transition: margin-left .5s ease;
+    transition: margin-left 0.5s ease, opacity 0.6s ease-out, margin-top 0.6s ease-out;
     padding: 16px;
     opacity: 0;
+    margin-top: 20px;
+    
     /*transition: opacity 0.5s ease; */
     /* margin-top: -5vh;
     transition: opacity 0.5s ease, margin-top 0.7s ease-out;
